@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Added support for settings a custom Jackson 2 object factory to JsonPath
+* Expecting content type to be a pre-defined content type (such as ContentType.XML) now accepts many kinds of different variations (thanks to exsuscito for the help) (issue 213).
 
 Change log 1.7.2 (2012-12-15)
 -----------------------------
